--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -15,7 +15,7 @@
   <title>Flask Overflow</title>
 </head>
 
-<body class="bg-light">
+<body class="bg-light" id="login-page" style="display: none;">
     <section style="background-color: #eee; min-height: 100vh;">
         <div class="container h-100 pb-3">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -26,8 +26,7 @@
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Flask Overflow</p>
-                      <h2 id="login-status">Checking login status...</h2>
-                      <form action="#" id="login-form" class="mx-1 mx-md-4" style="display: none;">
+                      <form action="#" id="login-form" class="mx-1 mx-md-4">
       
                         <div class="d-flex flex-row align-items-center">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
