--- a/flask_app/templates/editquestion.html
+++ b/flask_app/templates/editquestion.html
@@ -42,25 +42,24 @@
     <div class="justify-content-center">
       <div class="row">
         <div class="col-12">
-          <div class="h-100px card">
-            <h1>Edit a Post</h1>
-          </div>
+          <h1 class="mt-5">Edit Post</h1>
+          <hr class="mb-5">
           <div class="col-12">
-            <div class="h-100px card">
+            <div class="shadow p-3 mb-5 bg-body rounded">
               <form>
-                <div class="form-group">
-                  <label for="title-subject-post">Title/Subject</label>
+                <div class="form-group pb-3 pt-1">
+                  <label for="title-subject-post" style="font-size: 20px;">Title/Subject</label>
                   <input class="form-control" id="title-subject-post" placeholder="Subject here">
                 </div>
                 <div class="form-group">
-                  <label for="question-contents">Enter Question Here</label>
-                  <textarea class="form-control" id="question-contents" rows="3"></textarea>
+                  <label for="question-contents" style="font-size: 20px;">Enter Question Here</label>
+                  <textarea class="form-control" placeholder="Content here" id="question-contents" rows="3"></textarea>
                 </div>
               </form>
+              <input class="btn btn-primary mb-1 mt-2" type="submit" value="Submit Edit" onclick="submitPost()">
             </div>
           </div>
         </div>
-        <input class="btn btn-primary" id="submit-edit" type="submit" value="Submit Edit">
       </div>
     </div>
   </div>
