--- a/flask_app/templates/viewquestion.html
+++ b/flask_app/templates/viewquestion.html
@@ -23,6 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/57d9119a00.js" crossorigin="anonymous"></script>
     <title>Flask Overflow</title>
 </head>
 
@@ -53,7 +54,11 @@
                 </div>
                 <div class="card">
                     <div class="card-body" style="background-color: #fff;">
-                        <span class="d-flex justify-content-between mb-2"><h6 id="user-asks"></h6><span><button id="edit-button" class="btn btn-secondary mr-3" style="display: none;">Edit Question</button><button id="delete-button" class="btn btn-danger" style="display: none;">Delete Question</button></span></span>
+                        <span class="d-flex justify-content-between mb-2">
+                            <h6 id="user-asks"></h6><span><button id="edit-button" class="btn btn-secondary mr-3"
+                                    style="display: none;">Edit Question</button><button id="delete-button"
+                                    class="btn btn-danger" style="display: none;">Delete Question</button></span>
+                        </span>
                         <hr class="mt-0 mx-n3">
                         <p id="question-body">
                             loading...
@@ -85,7 +90,7 @@
                 </div>
 
                 <div class="mt-5" id="answer-container">
-                    
+
                     <!-- <div class="card">
                         <div class="card-header">
                             <div class="row">
@@ -125,17 +130,37 @@
                         </div>
                     </div> -->
                 </div>
-                <div class="fixed-bottom p-5 bg-dark">
-                    <div class="form-floating">
-                        <textarea class="form-control" placeholder="Answer me!" id="answer-question"
-                            style="height: 100px"></textarea>
-                        <label for="answer-question">Answer the issue!</label>
-                        <button class="btn btn-primary mt-1" id="submit-answer">Submit Answer</button>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
+    </div>
+    <div class="fixed-bottom mr-2" style="margin-bottom: 18%; text-align: right;">
+        <a data-toggle="collapse" id="top-arrow" href="#collapse1"><i class="fas fa-arrow-circle-down"></i></a>
+    </div>
+    <div class="fixed-bottom m-2" style="text-align: right;">
+        <a data-toggle="collapse" id='bottom-arrow' href="#collapse1"><i class="fas fa-arrow-circle-up"></i></a>
+    </div>
 </body>
+<footer>
+    <div id="collapse1" class="panel-collapse collapse">
+        <div class="fixed-bottom p-5 bg-dark">
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="Answer me!" id="answer-question"
+                    style="height: 100px"></textarea>
+                <label for="answer-question">Answer the issue!</label>
+                <button class="btn btn-primary mt-1" id="submit-answer">Submit Answer</button>
+            </div>
+        </div>
+    </div>
+</footer>
+<script>
+    $('#top-arrow').hide();
+    $('#bottom-arrow').on("click", function () {
+        $('#top-arrow').show();
+    });
+    $('#top-arrow').on("click", function () {
+        $('#top-arrow').hide();
+    });
+</script>
 
 </html>
