--- a/flask_app/templates/feed.html
+++ b/flask_app/templates/feed.html
@@ -59,6 +59,12 @@
             <h2>
               Recent Questions
             </h2>
+            
+            <div class="d-flex">
+              <input class="form-control mr-3" id="search-box" placeholder="Search Questions">
+              <button class="btn btn-primary" onclick="searchQuestion()">Search</button>
+              <button class="btn btn-primary ml-3" onclick="route('/feed')">Clear Search</button>
+            </div>
           </div>
         </div>
       </div>
